Fix case sensitive images and grab latest

--- a/assets/css/compendium.css
+++ b/assets/css/compendium.css
@@ -47,7 +47,7 @@
 }
 
 .frostfire {
-  background: linear-gradient(#c0f0f0, #e6ba90);
+  background: linear-gradient(to right, #c0f0f0, #e6ba90);
 }
 
 .elemental {
