--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -1,3 +1,14 @@
+.subsite-title {
+  text-transform: uppercase;
+  font-size: 0.6em;
+  vertical-align: top;
+}
+
+hr {
+  border: none;
+  border-bottom: 1px solid var(--solarized-mix1);
+}
+
 .record-name {
   font-style: italic;
 }
@@ -19,7 +30,7 @@
 .bar-descriptor {
   text-transform: uppercase;
   font-size: 0.6em;
-  vertical-align: super;
+  vertical-align: top;
 }
 
 .earth, .water, .fire, .poison, .ice, .lightning, .frostfire, .elemental, .physical {
@@ -96,5 +107,22 @@
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
   }
 }
+img.character {
+  border: 4px ridge brown;
+  margin-right: 1em;
+}
 
-/*# sourceMappingURL=compendium.css.map */
+.callout {
+  max-width: 540px;
+  display: inline-block;
+  padding: 1em;
+  margin-top: 1em;
+  background: var(--solarized-mono2);
+  border: 1px solid var(--solarized-mono1);
+  border-radius: 0.3em;
+}
+.callout > p {
+  margin-bottom: 0;
+}
+
+/*# sourceMappingURL=my-style.css.map */
