--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .site-header.decorative-background {
   background: url("/assets/img/background-light.jpg");
   background-repeat: no-repeat;
@@ -30,7 +31,6 @@
 }
 
 .callout {
-  max-width: 540px;
   display: inline-block;
   padding: 0.6em 1em;
   background: var(--solarized-mono2);
@@ -155,6 +155,10 @@ img.character {
   margin-right: 1em;
 }
 
+img + .callout {
+  max-width: 540px;
+}
+
 @media (max-width: 819px) {
   .instruction-section .callout, .instruction-section .nelvin-small {
     display: none;
@@ -248,6 +252,13 @@ img.character {
 
 .xp {
   color: #31b4bf;
+}
+
+ul.horizontal > li {
+  display: inline-block;
+}
+ul.horizontal > li + li:before {
+  content: " ❧";
 }
 
 /*# sourceMappingURL=my-style.css.map */
