--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -180,7 +180,6 @@ img + .callout {
   margin-top: -10px;
   margin-left: 0.5em;
   position: absolute;
-  filter: drop-shadow(0 0 2px var(--glow));
 }
 .instruction-section .nelvin-small {
   position: absolute;
@@ -221,11 +220,18 @@ img + .callout {
   position: absolute;
   font-size: 0.6em;
   top: 3px;
-  left: 3px;
-  background-color: var(--solarized-mono3);
-  border-radius: 0.3em;
+  left: 1.75em;
+  background-color: rgba(255, 255, 255, 0.875);
+  border-radius: 2em;
   padding: 0 0.4em;
   text-align: center;
+  border: 1px solid var(--solarized-mono1);
+  border-top: 0;
+}
+@media (prefers-color-scheme: dark) {
+  .item-number {
+    background-color: rgba(0, 0, 0, 0.875);
+  }
 }
 
 .callout {
@@ -234,6 +240,20 @@ img + .callout {
 
 .callout:has(> .item-number) {
   padding: 1em;
+}
+
+.nelvin ~ .callout, .nelvin-small + .callout, .instruction-section .callout {
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 2em;
+  font-family: "Comic Neue", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol", "Apple Color Emoji", Roboto, Helvetica, Arial, sans-serif;
+}
+@media (prefers-color-scheme: dark) {
+  .nelvin ~ .callout, .nelvin-small + .callout, .instruction-section .callout {
+    background-color: rgba(0, 0, 0, 0.95);
+  }
+}
+.nelvin ~ .callout .item-number, .nelvin-small + .callout .item-number, .instruction-section .callout .item-number {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol", "Apple Color Emoji", Roboto, Helvetica, Arial, sans-serif;
 }
 
 @media (prefers-color-scheme: light) {
