--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -52,6 +52,10 @@ hr {
   border-bottom: 1px solid var(--solarized-mix1);
 }
 
+table ul {
+  margin-bottom: 0;
+}
+
 .record-name {
   font-style: italic;
 }
