--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -82,6 +82,7 @@ table ul {
   text-transform: uppercase;
   font-size: 0.6em;
   vertical-align: top;
+  white-space: nowrap;
 }
 
 .quiet-text {
@@ -94,7 +95,6 @@ table ul {
   width: 2em;
   line-height: 2em;
   text-align: center;
-  font-size: 0.75em;
   margin-bottom: 0.5em;
 }
 
