--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -105,6 +105,28 @@ table ul {
   border: 4px ridge;
 }
 
+li.user-stat-changes {
+  list-style-type: "☉";
+  border-left: 1px solid var(--solarized-mono1);
+  border-radius: 0.5em;
+  padding-left: 0.5em;
+  margin-left: -0.5em;
+}
+
+li.opponent-stat-changes {
+  list-style-type: "☍";
+  border-left: 1px solid var(--solarized-mono1);
+  border-radius: 0.5em;
+  padding-left: 0.5em;
+  margin-left: -0.5em;
+}
+
+.compendium-link:hover::after {
+  content: "📖";
+  font-size: small;
+  margin-left: 0.125em;
+}
+
 .earth, .water, .fire, .poison, .ice, .lightning, .frostfire, .elemental, .physical {
   padding: 0 0.3em;
   border-radius: 0.3em;
