--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -45,6 +45,16 @@
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji";
 }
 
+@keyframes expand {
+  from {
+    opacity: 0;
+    line-height: 0;
+  }
+}
+details[open] > :not(summary) {
+  animation: expand 0.3s;
+}
+
 .subsite-title {
   text-transform: uppercase;
   font-size: 0.6em;
@@ -78,7 +88,7 @@ table ul {
   border-radius: 0.5em;
 }
 
-.bar-descriptor {
+.small-text {
   text-transform: uppercase;
   font-size: 0.6em;
   vertical-align: top;
@@ -125,6 +135,10 @@ li.opponent-stat-changes {
   content: "📖";
   font-size: small;
   margin-left: 0.125em;
+}
+
+.game-info {
+  font-style: italic;
 }
 
 .earth, .water, .fire, .poison, .ice, .lightning, .frostfire, .elemental, .physical {
