--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -49,6 +49,10 @@
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji";
 }
 
+path.monocolour {
+  fill: var(--solarized-mono01);
+}
+
 @keyframes slide-in {
   from {
     opacity: 0;
