--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -3,6 +3,16 @@
   z-index: 1;
 }
 
+@media (max-width: 819px) {
+  .large-screens-only {
+    display: none;
+  }
+}
+@media (min-width: 820px) {
+  .small-screens-only {
+    display: none;
+  }
+}
 .site-header.decorative-background {
   background: url("/assets/img/background-light.jpg");
   background-repeat: no-repeat;
@@ -245,14 +255,6 @@ img + .callout {
 
 @media (max-width: 819px) {
   .instruction-section .callout, .instruction-section .nelvin-small {
-    display: none;
-  }
-  .large-screens-only {
-    display: none;
-  }
-}
-@media (min-width: 820px) {
-  .small-screens-only {
     display: none;
   }
 }
