--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -3,14 +3,14 @@
   z-index: 1;
 }
 
-@media (max-width: 819px) {
+@media (max-width: 859px) {
   .large-screens-only {
-    display: none;
+    display: none !important;
   }
 }
-@media (min-width: 820px) {
+@media (min-width: 860px) {
   .small-screens-only {
-    display: none;
+    display: none !important;
   }
 }
 .site-header.decorative-background {
@@ -253,7 +253,7 @@ img + .callout {
   max-width: 540px;
 }
 
-@media (max-width: 819px) {
+@media (max-width: 859px) {
   .instruction-section .callout, .instruction-section .nelvin-small {
     display: none;
   }
