--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -394,4 +394,49 @@ ul.horizontal > li + li:before {
   font-size: 12px;
 }
 
+.class-widget {
+  display: inline-block;
+  width: 192px;
+  background: var(--solarized-mono2);
+  border: 1px solid var(--solarized-mono1);
+  border-radius: 3em 3em 1em 1em;
+  padding: 1em;
+  margin: 0.5em;
+}
+
+.class-widget details > summary {
+  cursor: pointer;
+  list-style: none;
+}
+
+.stats-grid {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 0 1em;
+}
+
+.stats-grid label {
+  grid-column: 1;
+}
+
+.stats-grid meter {
+  width: 100%;
+}
+
+.stats-grid meter.damage-bar::-webkit-meter-optimum-value {
+  background-color: orange;
+}
+
+.stats-grid meter.resilience-bar::-webkit-meter-optimum-value {
+  background-color: blue;
+}
+
+.stats-grid meter.versatility-bar::-webkit-meter-optimum-value {
+  background-color: green;
+}
+
+.stats-grid meter.difficulty-bar::-webkit-meter-optimum-value {
+  background-color: black;
+}
+
 /*# sourceMappingURL=my-style.css.map */
