--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -413,6 +413,7 @@ ul.horizontal > li + li:before {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-gap: 0 1em;
+  align-items: center;
 }
 
 .stats-grid label {
