--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -63,6 +63,13 @@ path.monocolour {
   fill: var(--solarized-mono01);
 }
 
+.decorative-circle {
+  border-radius: 100%;
+  border: 4px ridge;
+  border-top: none;
+  border-left: none;
+}
+
 @keyframes slide-in {
   from {
     opacity: 0;
