--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -84,11 +84,15 @@ path.monocolour {
   image-rendering: pixelated;
 }
 
-ul.horizontal > li {
+ul.horizontal li {
   display: inline-block;
 }
-ul.horizontal > li + li:before {
+ul.horizontal li + li:before {
   content: " ❧";
+}
+
+.hover-highlight:hover {
+  filter: brightness(107%) contrast(107%);
 }
 
 @keyframes expand {
