--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -84,6 +84,10 @@ path.monocolour {
   image-rendering: pixelated;
 }
 
+ul {
+  list-style-type: "❧ ";
+}
+
 ul.horizontal li {
   display: inline-block;
 }
